# ghanemone

./: .gitignore  .prettierrc.cjs  AlasBuana Hi-Fi.html  AlasBuana Prototype.html  AlasBuana Wireframes.html  CONTRIBUTING.md  README.md  SECURITY.md  hifi-auxiliary.jsx  hifi-components.jsx  hifi-explore.jsx  hifi-mobile.jsx  hifi-pages-2.jsx  hifi-pages.jsx  hifi-tokens.css  package-lock.json  package.json  page-analytics.jsx  page-apps.jsx  page-auxiliary.jsx  page-dashboard.jsx  page-detail.jsx  page-explore.jsx  page-map.jsx  page-mobile.jsx  page-monitoring.jsx  page-workspace.jsx  primitives.jsx  prototype-app.jsx  prototype-realmap.jsx  prototype-states.jsx  styles.css  todolist.md  turbo.json
.claude/agents/: README.md  backend-agent.md  devops-agent.md  documentation-agent.md  frontend-agent.md  gis-agent.md  launch-sre-agent.md  performance-agent.md  qa-agent.md  security-agent.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml  deploy-staging.yml
apps/admin/: .env.example  .gitignore  eslint.config.js  index.html  package.json  postcss.config.cjs  tailwind.config.ts  vite.config.ts
apps/api/: .env.example  .gitignore  eslint.config.mjs  jest.config.ts  jest.e2e.config.ts  package.json  tsconfig.build.json  tsconfig.json
apps/web/: .env.example  eslint.config.js  index.html  package.json  postcss.config.cjs  tailwind.config.ts  (+2 more)
apps/workers/: .gitignore  README.md  package.json  pyproject.toml
apps/workers/src/ghanem_workers/: __init__.py  main.py
docs/: api-contract.md  auth-flow.md  branch-strategy.md  component-map.md  data-model.md  handoff-deck.md  state-model.md
infra/: docker-compose.dev.yml
(+263 files in other folders)
