[tool.poetry]
name = "ghanem-workers"
version = "0.0.0"
description = "Ghanem.one spatial workers — consume BullMQ jobs, process SEG-Y / SHP / KML / raster, write results back ke PostGIS + MinIO."
authors = ["Ghanem.one DevOps <devops@ghanemtech.co.id>"]
readme = "README.md"
packages = [{ include = "ghanem_workers", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
# Queue consumer: BullMQ Python client (atau direct redis BRPOPLPUSH kalau bullmq-python tertinggal versi)
bullmq = "^2.7.5"
redis = "^5.0.8"
# Database + spatial ORM
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.32"
geoalchemy2 = "^0.15.2"
# Spatial libraries
segyio = "^1.9.12"
gdal = "^3.9.1"
geopandas = "^1.0.1"
rasterio = "^1.3.10"
shapely = "^2.0.5"
fiona = "^1.10.0"
pyproj = "^3.6.1"
# Observability
prometheus-client = "^0.20.0"
structlog = "^24.4.0"
# Config + validation
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.8"
ruff = "^0.6.2"
mypy = "^1.11.1"

[tool.poetry.scripts]
ghanem-worker = "ghanem_workers.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["dist", "build", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
asyncio_mode = "auto"
